# ci-actions

./: CMakeLists.txt  README.md  REUSE.toml  index.html  test.c  test.cpp
.github/workflows/: build-test.yml  ci.yml  optional-init.yml  update-copyright.yml
.reuse/: dep5
cmake/: action.yml  run-cmake-helper.sh  run-cmake.sh  setup-cmake.ps1  setup-cmake.sh
docs/: action.yml  doxygen_spdx_filter.py  generate-docs.sh  master.json  setup-doxygen.sh  v1.4.json
docs-coverage/: action.yml  doc-coverage.sh  doc_coverage.py
docs/docs-target/: globals_func.html  md_README.html
docs/intelmpi/: dir_fd0428e2a098ab3b59d137bfb7f13bee.html  globals.html  graph_legend.html  md_README.html  test_8c__incl.md5
docs/master/: dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_906962ebe91e1b9fb0ee3193ad487631.html  dir_fd0428e2a098ab3b59d137bfb7f13bee.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  pages.html  test_8c.html  test_8c__incl.map  test_8cpp.html  test_8cpp__incl.map  test_8cpp__incl.md5
docs/update-copyright/: dir_46a9f484808c1c609004419ee1e6a6a5.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_fd0428e2a098ab3b59d137bfb7f13bee.html  files.html  globals.html  index.html  (+13 more)
init/: action.yml  copy-mpi-lib.ps1  setup-compilers.ps1  setup-compilers.sh  setup-doxygen.sh  setup-llvm-vscode.ps1  setup-llvm.sh  setup-mpi.ps1  setup-mpi.sh
reuse-check/: action.yml  reuse-check.sh
update-copyright/: action.yml  update_copyright.py
website-deploy/: action.yml  website-deploy.sh
(+21 files in other folders)
